Return correct properties. It fixes PR kern/54264. XXX I'm not sure all bidirectional uaudio devices support FULLDUPLEX     or INDEPENDENT.